[gd_scene load_steps=5 format=2]

[ext_resource path="res://Audio/CaveLoop_layer2.ogg" type="AudioStream" id=1]
[ext_resource path="res://Audio/CaveLoop_layer1.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scripts/BackgroundMusic.gd" type="Script" id=3]
[ext_resource path="res://Audio/CaveLoop_layer3.ogg" type="AudioStream" id=4]

[node name="BackgroundMusic" type="Node"]
script = ExtResource( 3 )

[node name="Layer1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -7.0
autoplay = true
__meta__ = {
"_editor_description_": ""
}

[node name="Layer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -7.0
__meta__ = {
"_editor_description_": ""
}

[node name="Layer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -7.0
__meta__ = {
"_editor_description_": ""
}

[node name="VolumeTween" type="Tween" parent="."]
